--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+body {
+  background-color: rgb(240, 235, 235);
+}
+
 main h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -8,6 +12,112 @@ main #contenedorProductos {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
+  padding: 3rem;
+}
+main #contenedorProductos .flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+main #contenedorProductos .flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+main #contenedorProductos .flip-card .flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-front, main #contenedorProductos .flip-card .flip-card-inner .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-front {
+  background-color: white;
+  color: black;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-front img {
+  width: 300px;
+  height: 300px;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-back {
+  background-color: #ED8074;
+  color: white;
+  transform: rotateY(180deg);
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-back .tituloCard, main #contenedorProductos .flip-card .flip-card-inner .flip-card-back p {
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  font-size: 25px;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-back p {
+  font-weight: 600;
+}
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-back button {
+  background-color: #1D7A8C;
+  padding: 1rem;
+  border-radius: 5px;
+  border: none;
+  width: fit-content;
+  color: white;
+}
+
+main section .tituloFormulario {
+  font-family: "Raleway", sans-serif;
+  text-align: center;
+  font-size: 25px;
+}
+main section .formularioContacto {
+  padding: 2rem 12rem;
+  gap: 30px;
+  display: grid;
+  grid-template-areas: "nombre apellido" "mail telefono" "consulta consulta" "enviar enviar";
+}
+main section .formularioContacto .inputNombre {
+  grid-area: nombre;
+}
+main section .formularioContacto .inputApellido {
+  grid-area: apellido;
+}
+main section .formularioContacto .inputMail {
+  grid-area: mail;
+}
+main section .formularioContacto .inputTelefono {
+  grid-area: telefono;
+}
+main section .formularioContacto .textArea {
+  grid-area: consulta;
+}
+main section .formularioContacto .inputSubmit {
+  grid-area: enviar;
+}
+
+@media only screen and (max-width: 600px) {
+  main #contenedorProductos {
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+    padding: 1rem;
+  }
+  main #contenedorProductos .flip-card {
+    width: 150px;
+    height: 150px;
+  }
+  main #contenedorProductos .flip-card .flip-card-inner .flip-card-front img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
