--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,13 @@ body {
   background-color: rgb(240, 235, 235);
 }
 
+header {
+  padding-right: 3rem;
+}
+header .botonCarrito {
+  font-size: 23px;
+}
+
 main h1 {
   font-family: "Raleway", sans-serif;
   text-align: center;
@@ -57,13 +64,14 @@ main #contenedorProductos .flip-card .flip-card-inner .flip-card-back {
   justify-content: space-evenly;
   align-items: center;
 }
-main #contenedorProductos .flip-card .flip-card-inner .flip-card-back .tituloCard, main #contenedorProductos .flip-card .flip-card-inner .flip-card-back p {
+main #contenedorProductos .flip-card .flip-card-inner .flip-card-back .tituloCard {
   font-family: "Raleway", sans-serif;
   text-align: center;
   font-size: 25px;
 }
 main #contenedorProductos .flip-card .flip-card-inner .flip-card-back p {
-  font-weight: 600;
+  font-weight: 500;
+  font-family: "Lato", sans-serif;
 }
 main #contenedorProductos .flip-card .flip-card-inner .flip-card-back button {
   background-color: #1D7A8C;
@@ -102,6 +110,23 @@ main section .formularioContacto .textArea {
 }
 main section .formularioContacto .inputSubmit {
   grid-area: enviar;
+  margin: 0 auto;
+  width: 200px;
+  background-color: #1D7A8C;
+  padding: 1rem;
+  border: none;
+  color: white;
+  border-radius: 10px;
+}
+main section .formularioContacto input, main section .formularioContacto textarea {
+  border: none;
+  padding: 1rem;
+  border-radius: 10px;
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+}
+main section .formularioContacto input:focus, main section .formularioContacto textarea:focus {
+  outline: none;
 }
 
 footer {
@@ -126,18 +151,82 @@ footer div .contenedorRedes a {
 }
 
 @media only screen and (max-width: 600px) {
+  header {
+    padding: 1rem;
+  }
+  header nav div div a img {
+    width: 13rem;
+    height: 3rem;
+  }
+}
+@media only screen and (max-width: 600px) {
   main #contenedorProductos {
     grid-template-columns: 1fr 1fr;
     gap: 15px;
     padding: 1rem;
   }
   main #contenedorProductos .flip-card {
-    width: 150px;
-    height: 150px;
+    margin: 0 auto;
+    width: 180px;
+    height: 180px;
   }
   main #contenedorProductos .flip-card .flip-card-inner .flip-card-front img {
     width: 100%;
     height: 100%;
+  }
+  main #contenedorProductos .flip-card .flip-card-inner .flip-card-back .tituloCard {
+    font-size: 18px;
+  }
+  main #contenedorProductos .flip-card .flip-card-inner .flip-card-back button {
+    padding: 0.1rem;
+    width: 145px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  main section .tituloFormulario {
+    font-size: 20px;
+  }
+  main section .formularioContacto {
+    padding: 1rem 2rem;
+    gap: 20px;
+    display: grid;
+    grid-template-areas: "nombre" "apellido" "mail" "telefono" "consulta" "enviar";
+  }
+  main section .formularioContacto .inputNombre {
+    grid-area: nombre;
+  }
+  main section .formularioContacto .inputApellido {
+    grid-area: apellido;
+  }
+  main section .formularioContacto .inputMail {
+    grid-area: mail;
+  }
+  main section .formularioContacto .inputTelefono {
+    grid-area: telefono;
+  }
+  main section .formularioContacto .textArea {
+    grid-area: consulta;
+    margin-bottom: 1rem;
+  }
+  main section .formularioContacto .inputSubmit {
+    grid-area: enviar;
+    margin: 0 auto;
+    width: 200px;
+    background-color: #1D7A8C;
+    padding: 1rem;
+    border: none;
+    color: white;
+    border-radius: 10px;
+  }
+  main section .formularioContacto input, main section .formularioContacto textarea {
+    border: none;
+    padding: 0.5rem;
+    border-radius: 10px;
+    font-size: 15px;
+    font-family: "Lato", sans-serif;
+  }
+  main section .formularioContacto input:focus, main section .formularioContacto textarea:focus {
+    outline: none;
   }
 }
 
