--- a/sass/_mqContenedorProductos.scss
+++ b/sass/_mqContenedorProductos.scss
@@ -20,6 +20,7 @@
                         button {
                             padding: 0.1rem;
                             width: 145px;
+                            font-size: 15px;
                         }
                     }
                 }
