Funcionalidad del carrito de compras desde js casi lista!

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,21 @@
 header {
     padding: 2.5rem 3rem;
-    .botonCarrito {
-        font-size: 23px;
+    div {
+        gap: 3px;
+        .botonCarrito {
+            font-size: 23px;
+            padding-right: 0;
+        }
+        .contadorCarrito {
+            color: white;
+            margin: 0;
+            background-color: $colorPrincipal;
+            height: 24px;
+            width: 24px;
+            border-radius: 100%;
+            text-align: center;
+            font-size: 17px;
+            font-weight: 500;
+        }
     }
 }
