--- a/sass/base.scss
+++ b/sass/base.scss
@@ -4,6 +4,7 @@
 @import "_estilosGenerales";
 @import "_header"; 
 @import "_contenedorProductos";
+@import "_tablaProductos"; 
 @import "_seccionFormulario"; 
 @import "_footer";
 
