--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,23 @@ body {
 header {
   padding: 2.5rem 3rem;
 }
-header .botonCarrito {
+header div {
+  gap: 3px;
+}
+header div .botonCarrito {
   font-size: 23px;
+  padding-right: 0;
+}
+header div .contadorCarrito {
+  color: white;
+  margin: 0;
+  background-color: #ED8074;
+  height: 24px;
+  width: 24px;
+  border-radius: 100%;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 main h1 {
@@ -83,6 +98,43 @@ main #contenedorProductos .flip-card .flip-card-inner .flip-card-back button {
 }
 main #contenedorProductos .flip-card .flip-card-inner .flip-card-back button:hover {
   background-color: #00233A;
+}
+
+aside div div table thead .tituloTabla {
+  text-align: center;
+}
+aside div div table #carritoOffcanvas .tablaProductos {
+  height: 5rem;
+}
+aside div div table #carritoOffcanvas .tablaProductos td {
+  width: 200px;
+}
+aside div div table #carritoOffcanvas .tablaProductos td img {
+  width: 85%;
+}
+aside div div table #carritoOffcanvas .tablaProductos .infoProducto {
+  font-size: 15px;
+  text-align: center;
+}
+aside div div table #carritoOffcanvas .tablaProductos .eliminarProducto {
+  font-size: 22px;
+  color: #ED8074;
+  height: 10px;
+}
+aside div div table #carritoOffcanvas .tablaProductos .eliminarProducto .deleteIconify {
+  border: 1px solid #ED8074;
+  cursor: pointer;
+}
+aside div .botonComprar {
+  background-color: #ED8074;
+  padding: 0.8rem 2rem;
+  border-radius: 4px;
+  border: none;
+  width: fit-content;
+  color: white;
+}
+aside div .botonComprar:hover {
+  background-color: #d64b3c;
 }
 
 main section .tituloFormulario {
